[package]
name = "CD-RomServer"
version = "0.1.0"
authors = ["Alex Zaslavskis <sahsariga111@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "0.13"
tokio = { version = "0.2", features = ["full"] }
pretty_env_logger = "0.4"
regex = "1.4.3"
chrono = "0.4.19"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
rocket = "0.4.6"
